@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArraySet;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.spring.initializr.generator.buildsystem.BuildSystem;
@@ -132,7 +131,7 @@ class ProjectGenerationIntegrationTests {
 
 	Stream<Arguments> parameters() {
 		List<Version> bootVersions = this.metadata.getBootVersions().getContent().stream()
-				.map((element) -> Version.parse(element.getId())).collect(Collectors.toList());
+				.map((element) -> Version.parse(element.getId())).toList();
 		String defaultJvmVersion = this.metadata.getJavaVersions().getContent().stream()
 				.filter(DefaultMetadataElement::isDefault).map(MetadataElement::getId).findAny().orElse("11");
 		List<Packaging> packagings = Arrays.asList(new JarPackaging(), new WarPackaging());
